K8S-Project/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  labels:
    app: webapp
spec:
  replicas : 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
        - containerPort: 8081
        env :
        - name : ME_CONFIG_MONGODB_ADMINUSERNAME
          valueFrom:
            secretKeyRef:
              name : mongo-secret
              key: mongo-user  
        - name : ME_CONFIG_MONGODB_ADMINPASSWORD
          valueFrom:
            secretKeyRef:
              name : mongo-secret
              key: mongo-password
        - name : ME_CONFIG_MONGODB_SERVER
          valueFrom:
            configMapKeyRef:
              name : mongo-config
              key: mongo-url

---

apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
  - port: 8081
    targetPort: 8081
    nodePort : 30100
